Changes made by Vijay Mittal (telerikappbuilder1@gmail.com).

--- a/Myntra/index.html
+++ b/Myntra/index.html
@@ -3,14 +3,24 @@
 <head>
     <title></title>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="kendo/styles/kendo.common.min.css" rel="stylesheet" />
+    <link href="kendo/styles/kendo.default.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="kendo/styles/bootstrap.min.css">
+    <link href="kendo/styles/kendo.common-bootstrap.min.css" rel="stylesheet" />
+    <link href="kendo/styles/kendo.bootstrap.min.css" rel="stylesheet" />
     <link href="kendo/styles/kendo.mobile.all.min.css" rel="stylesheet" />
+    <link href="myntra/style/main.css" rel="stylesheet"/>
 
-    <script src="cordova.js"></script>
-    <script src="kendo/js/jquery.min.js"></script>
-    <script src="kendo/js/kendo.mobile.min.js"></script>
+   
     
 </head>
 <body>
-    
+    <!--Script File Place Here-->
+    <script src="cordova.js"></script>
+    <script src="kendo/js/jquery.min.js"></script>
+    <script src="kendo/js/kendo.mobile.min.js"></script>
+    <script src="myntra/script/app.js"></script>
+    <script src="myntra/script/home.js"></script>
 </body>
 </html>
